--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
         <item>Sistemas</item>
         <item>Mantenimiento</item>
     </string-array>
+
+    <string-array name="rol">
+        <item>Encargado</item>
+        <item>Administrador</item>
+    </string-array>
 </resources>
